--- a/index.html
+++ b/index.html
@@ -20,17 +20,36 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a id="home-page-link" class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a id="about-page-link" class="nav-link" href="#">About</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <h1>Home page</h1>
+    <div id="home-page" class="d-none">
+        <h1>Home Page</h1>
+    </div>
+
+    <div id="about-page" >
+        <h1>About Page</h1>
+    </div>
+
+    <script>
+        const homePageLinkElement = document
+            .getElementById('home-page-link')
+        console.log(homePageLinkElement);
+
+        homePageLinkElement.addEventListener('click', function () {
+            console.log('You clicked on the home page link');
+        })
+
+
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
