--- a/index.html
+++ b/index.html
@@ -32,22 +32,28 @@
 
     <div id="home-page" class="d-none">
         <h1>Home Page</h1>
+        <p>This is our home page</p>
     </div>
 
-    <div id="about-page" >
+    <div id="about-page">
         <h1>About Page</h1>
+        <p>this is our about page</p>
     </div>
 
     <script>
-        const homePageLinkElement = document
-            .getElementById('home-page-link')
-        console.log(homePageLinkElement);
+        const homePageLinkElement = document.getElementById('home-page-link');
+        document.getElementById('about-page-link');
 
+        console.log(homePageLinkElement);
         homePageLinkElement.addEventListener('click', function () {
             console.log('You clicked on the home page link');
-        })
+            const homePageCLassList = document.getElementById('home-page').classList;
+            homePageCLassList.remove('d-none');
 
+            document.getElementById('about-page').classList.add('d-none');
 
+            console.log('homePageClassList', homePageCLassList);
+        });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
