--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
 
             console.log('homePageClassList', homePageCLassList);
         });
+
+        const aboutPageLinkElement = document.getElementById('about-page-link');
+            document.getElementById('about-page-link');
+
+            console.log(aboutPageLinkElement);
+            aboutPageLinkElement.addEventListener('click', function () {
+                console.log('You clicked on the about page link');
+                const homePageCLassList = document.getElementById('about-page').classList;
+                homePageCLassList.remove('d-none');
+
+                document.getElementById('home-page').classList.add('d-none');
+
+                console.log('homePageClassList', homePageCLassList);
+            });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
