--- a/index.html
+++ b/index.html
@@ -40,35 +40,7 @@
         <p>this is our about page</p>
     </div>
 
-    <script>
-        const homePageLinkElement = document.getElementById('home-page-link');
-        document.getElementById('about-page-link');
-
-        console.log(homePageLinkElement);
-        homePageLinkElement.addEventListener('click', function () {
-            console.log('You clicked on the home page link');
-            const homePageCLassList = document.getElementById('home-page').classList;
-            homePageCLassList.remove('d-none');
-
-            document.getElementById('about-page').classList.add('d-none');
-
-            console.log('homePageClassList', homePageCLassList);
-        });
-
-        const aboutPageLinkElement = document.getElementById('about-page-link');
-            document.getElementById('about-page-link');
-
-            console.log(aboutPageLinkElement);
-            aboutPageLinkElement.addEventListener('click', function () {
-                console.log('You clicked on the about page link');
-                const homePageCLassList = document.getElementById('about-page').classList;
-                homePageCLassList.remove('d-none');
-
-                document.getElementById('home-page').classList.add('d-none');
-
-                console.log('homePageClassList', homePageCLassList);
-            });
-    </script>
+    <script src="app.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
