--- a/index.html
+++ b/index.html
@@ -25,19 +25,27 @@
                     <li class="nav-item">
                         <a id="about-page-link" class="nav-link" href="#">About</a>
                     </li>
+                    <li class="nav-item">
+                        <a id="media-page-link" class="nav-link" href="#">Media</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div id="home-page" class="d-none">
+    <div id="home-page" >
         <h1>Home Page</h1>
         <p>This is our home page</p>
     </div>
 
-    <div id="about-page">
+    <div id="about-page" class="d-none">
         <h1>About Page</h1>
         <p>this is our about page</p>
+    </div>
+
+    <div id="media-page" class="d-none">
+        <h1>Media Page</h1>
+        <p>this is our media page</p>
     </div>
 
     <script src="app.js"></script>
