--- a/Step-02/index.html
+++ b/Step-02/index.html
@@ -7,6 +7,7 @@
     <title>Home page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -33,22 +34,33 @@
         </div>
     </nav>
 
+    <!-- Home Page -->
     <div id="home-page" >
         <h1>Home Page</h1>
         <p>This is our home page</p>
+        <div class="container">
+            <div class="mb-4">
+                <button>Prev</button>
+                <button class="ms-3">Next</button>
+            </div>
+            <img src="images/OHR.HickmanBridge_ROW9566895207_1920x1080.jpg" alt="">
+        </div>
     </div>
 
+    <!-- About Page -->
     <div id="about-page" class="d-none">
         <h1>About Page</h1>
         <p>this is our about page</p>
     </div>
 
+    <!-- Media Page -->
     <div id="media-page" class="d-none">
         <h1>Media Page</h1>
         <p>this is our media page</p>
     </div>
 
     <script src="app.js"></script>
+    <script src="slider.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
