added js to prev and next images

--- a/Step-02/index.html
+++ b/Step-02/index.html
@@ -35,17 +35,26 @@
     </nav>
 
     <!-- Home Page -->
-    <div id="home-page" >
+    <div id="home-page">
         <h1>Home Page</h1>
         <p>This is our home page</p>
         <div class="container">
             <div class="mb-4">
-                <button>Prev</button>
-                <button class="ms-3">Next</button>
-            </div>
+                <button id="prev">Prev</button>
+                <button id="next" class="ms-3">Next</button>
+        </div>
             <img src="images/OHR.HickmanBridge_ROW9566895207_1920x1080.jpg" alt="">
         </div>
-    </div>
+        <!-- </div>
+            <img src="images/OHR.LongsPeak_ROW9098186381_1920x1080.jpg" alt="">
+        </div>
+        </div>
+            <img src="images/OHR.NoctilucentClouds_ROW9144099035_1920x1080.jpg" alt="">
+        </div>
+        </div>
+            <img src="images/OHR.SpiralHill_ROW7328923046_1920x1080.jpg" alt="">
+        </div>
+    </div> -->
 
     <!-- About Page -->
     <div id="about-page" class="d-none">
