--- a/Examples/javascript/functions.html
+++ b/Examples/javascript/functions.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <script>
-        
+        function mul(value1, value2) {
+            const result = value1 * value2;
+            return result;
+        }
+
+        console.log('multiplying 5 * 4 = ', mul(5, 4));
     </script>
 </body>
 </html>
