--- a/Step-02/index.html
+++ b/Step-02/index.html
@@ -42,19 +42,19 @@
             <div class="mb-4">
                 <button id="prev">Prev</button>
                 <button id="next" class="ms-3">Next</button>
+                <img id="slider-image" src="images/OHR.HickmanBridge_ROW9566895207_1920x1080.jpg" alt="">
+            </div>
+            <!-- </div>
+                <img src="images/OHR.LongsPeak_ROW9098186381_1920x1080.jpg" alt="">
+            </div>
+            </div>
+                <img src="images/OHR.NoctilucentClouds_ROW9144099035_1920x1080.jpg" alt="">
+            </div>
+            </div>
+                <img src="images/OHR.SpiralHill_ROW7328923046_1920x1080.jpg" alt="">
+            </div> -->
         </div>
-            <img src="images/OHR.HickmanBridge_ROW9566895207_1920x1080.jpg" alt="">
-        </div>
-        <!-- </div>
-            <img src="images/OHR.LongsPeak_ROW9098186381_1920x1080.jpg" alt="">
-        </div>
-        </div>
-            <img src="images/OHR.NoctilucentClouds_ROW9144099035_1920x1080.jpg" alt="">
-        </div>
-        </div>
-            <img src="images/OHR.SpiralHill_ROW7328923046_1920x1080.jpg" alt="">
-        </div>
-    </div> -->
+    </div>
 
     <!-- About Page -->
     <div id="about-page" class="d-none">
